fix: dataset selector can't open on safari

--- a/src/assets/ark/popover.css
+++ b/src/assets/ark/popover.css
@@ -6,6 +6,10 @@
   @apply bg-transparent;
 }
 
+[data-scope='popover'][data-part='close-trigger'] {
+  @apply bg-transparent;
+}
+
 [data-scope='popover'][data-part='content'] {
   @apply bg-base;
   @apply border border-base rounded-md overflow-hidden;
